﻿Revision history for Dist-Zilla-PluginBundle-Author-KENTNL

2.022003 2014-12-14T09:17:18Z 085ea12

2.022002 2014-12-14T09:15:08Z ed0dd28
 [Dependencies::Stats]
 - Dependencies changed since 2.022001, see misc/*.deps* for details
 - configure: ↑1
 - develop: ↑19
 - runtime: ↑22
 - test: ↑1

 [Minor]
 - Drop BuiltWith data from META.* and isolate in own file.

2.022001 2014-12-10T09:57:13Z d29ce03
 [00 Minor]
 - Drop ReadmeFromPod until its at least usable again.
 - Drop utf8 and 5.008 from the default module template.

 [Bugfix]
 - Make miniting profile tests happy by giving a valid abstract by default
 - Anticipate needing 5.006 as a prereq.

 [Dependencies::Stats]
 - Dependencies changed since 2.022000, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: ↑29 -1 (recommends: ↑1, suggests: ↑1)
 - runtime: ↑37 -1
 - test: +1 ↑5 (recommends: ↑3)

2.022000 2014-10-25T09:54:57Z 784f4f1
 [00 Minor]
 - Replace EOLTests with Test::EOL

 [Dependencies::Stats]
 - Dependencies changed since 2.021000, see misc/*.deps* for details
 - configure: (recommends: ↑1)
 - develop: +3 ↑26 -1 (recommends: +1, suggests: ↑1)
 - runtime: +1 ↑29 -1
 - test: ↑2 (recommends: ↑2)

 [Utils]
 - use canonicalised Sereal keys

2.021000 2014-10-05T11:28:53Z 7814800
 [00 Minor]
 - Inject Prereqs::AuthorDeps to auto discover develop deps.
 - Add shortend SHA1 to changes headers.

 [Dependencies::Stats]
 - Dependencies changed since 2.020005, see misc/*.deps* for details
 - develop: ↑1
 - runtime: +1 ↑1

2.020005 2014-10-03T07:04:22Z
 [Bugfix]
 - dep_changes.pl: Use a flattened key value because the previous release started segv-ing and eating all my ram
   shortly after release.

 [Utils]
 - dep_changes.pl: Shard out LMDB namespaces to distinct DBs till I can work out a better way to see wtf is going on
   inside them.

2.020004 2014-10-03T06:41:47Z
 [Dependencies::Stats]
 - Dependencies changed since 2.020003, see misc/*.deps* for details
 - develop: ↑4