@@ -107,6 +107,7 @@ requires:
   Dist::Zilla::Plugin::MetaYAML: '5.029'
   Dist::Zilla::Plugin::MinimumPerl: '1.006'
   Dist::Zilla::Plugin::PerlTidy: '0.19'
+  Dist::Zilla::Plugin::Pod2Readme: '0.001'
   Dist::Zilla::Plugin::PodCoverageTests: '5.029'
   Dist::Zilla::Plugin::PodSyntaxTests: '5.029'
   Dist::Zilla::Plugin::PodWeaver: '4.006'
@@ -472,9 +473,9 @@ x_Dist_Zilla:
       name: '@Author::KENTNL/Author::KENTNL::RecommendFixes'
       version: '0.004001'
     -
-      class: Dist::Zilla::Plugin::ReadmeAnyFromPod
+      class: Dist::Zilla::Plugin::Pod2Readme
       name: '@Author::KENTNL/ShippedReadme'
-      version: '0.142470'
+      version: '0.001'
     -
       class: Dist::Zilla::Plugin::ReadmeAnyFromPod
       name: '@Author::KENTNL/ReadmeAnyFromPod'
