@@ -56,6 +56,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::MetaYAML" => "5.029",
     "Dist::Zilla::Plugin::MinimumPerl" => "1.006",
     "Dist::Zilla::Plugin::PerlTidy" => "0.19",
+    "Dist::Zilla::Plugin::Pod2Readme" => "0.001",
     "Dist::Zilla::Plugin::PodCoverageTests" => "5.029",
     "Dist::Zilla::Plugin::PodSyntaxTests" => "5.029",
     "Dist::Zilla::Plugin::PodWeaver" => "4.006",
@@ -168,6 +169,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::MinimumPerl" => "1.006",
   "Dist::Zilla::Plugin::ModuleBuild" => 0,
   "Dist::Zilla::Plugin::PerlTidy" => "0.19",
+  "Dist::Zilla::Plugin::Pod2Readme" => "0.001",
   "Dist::Zilla::Plugin::PodCoverageTests" => "5.029",
   "Dist::Zilla::Plugin::PodSyntaxTests" => "5.029",
   "Dist::Zilla::Plugin::PodWeaver" => "4.006",
