@@ -1,6 +1,66 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 2.022003
+ [Changed / develop recommends]
+ - Test::More 1.001009 → 1.001014
+
+ [Changed / develop requires]
+ - Dist::Zilla 5.028 → 5.029
+ - Dist::Zilla::Plugin::AutoPrereqs 5.028 → 5.029
+ - Dist::Zilla::Plugin::ConfirmRelease 5.028 → 5.029
+ - Dist::Zilla::Plugin::Git::Check 2.028 → 2.029
+ - Dist::Zilla::Plugin::Git::Commit 2.028 → 2.029
+ - Dist::Zilla::Plugin::Git::CommitBuild 2.028 → 2.029
+ - Dist::Zilla::Plugin::Git::GatherDir 2.028 → 2.029
+ - Dist::Zilla::Plugin::Git::Tag 2.028 → 2.029
+ - Dist::Zilla::Plugin::License 5.028 → 5.029
+ - Dist::Zilla::Plugin::MakeMaker 5.028 → 5.029
+ - Dist::Zilla::Plugin::Manifest 5.028 → 5.029
+ - Dist::Zilla::Plugin::ManifestSkip 5.028 → 5.029
+ - Dist::Zilla::Plugin::MetaConfig 5.028 → 5.029
+ - Dist::Zilla::Plugin::MetaJSON 5.028 → 5.029
+ - Dist::Zilla::Plugin::MetaTests 5.028 → 5.029
+ - Dist::Zilla::Plugin::MetaYAML 5.028 → 5.029
+ - Dist::Zilla::Plugin::ModuleShareDirs 5.028 → 5.029
+ - Dist::Zilla::Plugin::PodCoverageTests 5.028 → 5.029
+ - Dist::Zilla::Plugin::PodSyntaxTests 5.028 → 5.029
+ - Dist::Zilla::Plugin::Prereqs 5.028 → 5.029
+ - Dist::Zilla::Plugin::TestRelease 5.028 → 5.029
+ - Dist::Zilla::Plugin::UploadToCPAN 5.028 → 5.029
+
+ [Changed / runtime requires]
+ - Dist::Zilla 5.028 → 5.029
+ - Dist::Zilla::File::FromCode 5.028 → 5.029
+ - Dist::Zilla::Plugin::AutoPrereqs 5.028 → 5.029
+ - Dist::Zilla::Plugin::ConfirmRelease 5.028 → 5.029
+ - Dist::Zilla::Plugin::Git::Check 2.028 → 2.029
+ - Dist::Zilla::Plugin::Git::Commit 2.028 → 2.029
+ - Dist::Zilla::Plugin::Git::CommitBuild 2.028 → 2.029
+ - Dist::Zilla::Plugin::Git::GatherDir 2.028 → 2.029
+ - Dist::Zilla::Plugin::Git::Tag 2.028 → 2.029
+ - Dist::Zilla::Plugin::License 5.028 → 5.029
+ - Dist::Zilla::Plugin::MakeMaker 5.028 → 5.029
+ - Dist::Zilla::Plugin::Manifest 5.028 → 5.029
+ - Dist::Zilla::Plugin::ManifestSkip 5.028 → 5.029
+ - Dist::Zilla::Plugin::MetaConfig 5.028 → 5.029
+ - Dist::Zilla::Plugin::MetaJSON 5.028 → 5.029
+ - Dist::Zilla::Plugin::MetaTests 5.028 → 5.029
+ - Dist::Zilla::Plugin::MetaYAML 5.028 → 5.029
+ - Dist::Zilla::Plugin::PodCoverageTests 5.028 → 5.029
+ - Dist::Zilla::Plugin::PodSyntaxTests 5.028 → 5.029
+ - Dist::Zilla::Plugin::Prereqs 5.028 → 5.029
+ - Dist::Zilla::Plugin::TestRelease 5.028 → 5.029
+ - Dist::Zilla::Plugin::UploadToCPAN 5.028 → 5.029
+ - Dist::Zilla::Role::FileGatherer 5.028 → 5.029
+ - Dist::Zilla::Role::MintingProfile::ShareDir 5.028 → 5.029
+ - Dist::Zilla::Role::PluginBundle 5.028 → 5.029
+ - IO::Socket::SSL 2.007 → 2.008
+
+ [Changed / test recommends]
+ - Test::More 1.001009 → 1.001014
+
+ [Changed / test requires]
+ - Test::DZil 5.028 → 5.029
 
 2.022002 2014-12-14T09:15:08Z
  [Changed / configure requires]
