@@ -1,6 +1,32 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
 2.022003
+ [Changed / develop recommends]
+ - Test::More 1.001009 → 1.001014
+
+ [Changed / develop requires]
+ - Dist::Zilla 5.028 → 5.029
+ - Dist::Zilla::Plugin::AutoPrereqs 5.028 → 5.029
+ - Dist::Zilla::Plugin::ConfirmRelease 5.028 → 5.029
+ - Dist::Zilla::Plugin::Git::Check 2.028 → 2.029
+ - Dist::Zilla::Plugin::Git::Commit 2.028 → 2.029
+ - Dist::Zilla::Plugin::Git::CommitBuild 2.028 → 2.029
+ - Dist::Zilla::Plugin::Git::GatherDir 2.028 → 2.029
+ - Dist::Zilla::Plugin::Git::Tag 2.028 → 2.029
+ - Dist::Zilla::Plugin::License 5.028 → 5.029
+ - Dist::Zilla::Plugin::MakeMaker 5.028 → 5.029
+ - Dist::Zilla::Plugin::Manifest 5.028 → 5.029
+ - Dist::Zilla::Plugin::ManifestSkip 5.028 → 5.029
+ - Dist::Zilla::Plugin::MetaConfig 5.028 → 5.029
+ - Dist::Zilla::Plugin::MetaJSON 5.028 → 5.029
+ - Dist::Zilla::Plugin::MetaTests 5.028 → 5.029
+ - Dist::Zilla::Plugin::MetaYAML 5.028 → 5.029
+ - Dist::Zilla::Plugin::ModuleShareDirs 5.028 → 5.029
+ - Dist::Zilla::Plugin::PodCoverageTests 5.028 → 5.029
+ - Dist::Zilla::Plugin::PodSyntaxTests 5.028 → 5.029
+ - Dist::Zilla::Plugin::Prereqs 5.028 → 5.029
+ - Dist::Zilla::Plugin::TestRelease 5.028 → 5.029
+ - Dist::Zilla::Plugin::UploadToCPAN 5.028 → 5.029
 
 2.022002 2014-12-14T09:15:08Z
  [Changed / develop requires]
