@@ -1,6 +1,8 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 2.022003
+ [Changed / test recommends]
+ - Test::More 1.001009 → 1.001014
 
 2.022002 2014-12-14T09:15:08Z
 
