@@ -43,6 +43,7 @@ do { my $x = {
                                       'Dist::Zilla::Plugin::MetaYAML' => '5.029',
                                       'Dist::Zilla::Plugin::MinimumPerl' => '1.006',
                                       'Dist::Zilla::Plugin::ModuleShareDirs' => '5.029',
+                                      'Dist::Zilla::Plugin::Pod2Readme' => '0.001',
                                       'Dist::Zilla::Plugin::PodCoverageTests' => '5.029',
                                       'Dist::Zilla::Plugin::PodSyntaxTests' => '5.029',
                                       'Dist::Zilla::Plugin::PodWeaver' => '4.006',
@@ -139,6 +140,7 @@ do { my $x = {
                                       'Dist::Zilla::Plugin::MetaYAML' => '5.029',
                                       'Dist::Zilla::Plugin::MinimumPerl' => '1.006',
                                       'Dist::Zilla::Plugin::PerlTidy' => '0.19',
+                                      'Dist::Zilla::Plugin::Pod2Readme' => '0.001',
                                       'Dist::Zilla::Plugin::PodCoverageTests' => '5.029',
                                       'Dist::Zilla::Plugin::PodSyntaxTests' => '5.029',
                                       'Dist::Zilla::Plugin::PodWeaver' => '4.006',
